# udacity-nasa-rag-exercise

./: .gitignore  Makefile  README.md  REPORT.md  evaluation_dataset.json  pyproject.toml  requirements_x86_64.txt  ruff.toml
app/: chat.py
src/nasa_rag/: embedding_pipeline.py  llm_client.py  rag_client.py  ragas_evaluator.py
tests/: test_version.py
